Update: [Added Logo]

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
-    <title>PayLockr - Smart Tax Management</title>
+    <meta name="description" content="PayLockr - Smart Tax Management & Financial Planning for Freelancers. Automatic tax vault, AI insights, and compliance tracking." />
+    <meta name="keywords" content="tax management, freelancer taxes, tax vault, financial planning, India tax, ITR filing" />
+    <meta name="author" content="Saiyam Jain" />
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="PayLockr - Smart Tax Management" />
+    <meta property="og:description" content="Automatic tax vault, AI insights, and compliance tracking for freelancers" />
+    <meta property="og:image" content="/og-image.png" />
+    
+    <title>PayLockr - Smart Tax Management for Freelancers</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
   </head>
   <body class="bg-gray-50 dark:bg-slate-950 transition-colors duration-200">
